--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "snowshoe",
-  "version": "0.2.0",
-  "description": "Node API Client for the Snowshoe API",
+  "name": "snowshoe-stamp-sdk",
+  "version": "0.3.0",
+  "description": "Node SDK Client for the Snowshoe API",
   "author": "Snowshoe",
   "contributors": [
-    { "name": "Philipe Navarro" }
+    { "name": "Snowshoe Stamp" }
   ],
   "license": "MIT",
   "main": "index.js",
@@ -13,13 +13,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/snowshoestamp/snowshoe_node.git"
+    "url": "https://github.com/snowshoestamp/snowshoe-sdk-node.git"
   },
   "keywords": [
     "snowshoe"
-  ],
-  "dependencies": {
-    "oauth": ">=0.9.12",
-    "q": ">=1.0.0"
-  }
+  ]
+  // "dependencies": {
+  //   "https": ">=0.9.12",
+  //   "querystring": ">=1.0.0"
+  // }
 }
