--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "snowshoe-stamp-sdk",
-  "version": "3.0.3",
+  "version": "3.1.0",
   "description": "Node SDK Client for the Snowshoe API",
   "author": "Snowshoe",
   "contributors": [
-    { "name": "Snowshoe Stamp" }
+    {
+      "name": "Snowshoe Stamp"
+    }
   ],
   "license": "MIT",
   "main": "index.js",
